--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Built files
+dist/
+
 # Logs
 logs
 *.log
@@ -106,4 +109,3 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
